fixing alignment issues for featured artist

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -581,7 +581,7 @@ section#featured a.featured-image img.featured-badge {
 
 section#featured h3 {
     font-size: 40px;
-    margin: 4px 0 0 0;
+    margin: -14px 0 0 0;
 }
 
 section#featured h4 {
